tests/ui/attributes/inline-attribute-enum-variant-error.stderr
error: the `inline` attribute cannot be used on enum variants
  --> $DIR/inline-attribute-enum-variant-error.rs:4:7
   |
LL |     #[inline]
   |       ^^^^^^
   |
   = help: the `inline` attribute can only be applied to functions

error: aborting due to 1 previous error

